[package]
name = "os"
version = "0.1.0"
authors = ["xushanpu123 <798304030@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4", features = ["spin_no_std" ] }
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

